# hide-and-seek-AI

./: .gitignore  README.md
game/: CMakeLists.txt  InstallMe.md  agent.cpp  agent.h  cube.cpp  cube.h  fixedTile.cpp  fixedTile.h  game.cpp  game.h  group.cpp  group.h  hider.cpp  hider.h  main.cpp  makefile  movableTile.cpp  movableTile.h  platform.txt  pywrap.cpp  ramp.cpp  ramp.h  scenario.cpp  scenario.h  seeker.cpp  seeker.h  setup.py  tile.cpp  tile.h
